# oneFileXe

./: README.md
.github/workflows/: windows-build.yml
Qt/: README.md
Qt/include/QtCore/: qconfig.h
Qt/lib/cmake/Qt6/: Qt6Targets.cmake  qt.toolchain.cmake
Qt/lib/cmake/Qt6BundledPcre2/: Qt6BundledPcre2Targets.cmake  Qt6BundledPcre2VersionlessTargets.cmake
Qt/lib/cmake/Qt6Core/: Qt6CoreConfigExtras.cmake  Qt6CoreDependencies.cmake  Qt6CoreTargets-release.cmake  Qt6CoreTargets.cmake
Qt/lib/cmake/Qt6CoreTools/: Qt6CoreToolsTargets.cmake
Qt/lib/cmake/Qt6EntryPointPrivate/: Qt6EntryPointPrivateTargets.cmake
src/: CMakeLists.txt  constants.h  cxxoptions.h  data.qrc  main.cpp  packer.cpp  packer.h
src/loader/: Makefile  main.cpp
